<resources>
    <string name="app_name">SCBlocker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>


    <string name="add_rule">Add Rule</string>
    <string name="all_rule">All Rules</string>
    <string name="block_content">Block Contents</string>
    <string name="all">All</string>
    <string name="call">Call</string>
    <string name="sms">SMS</string>

    <string name="rule_label">Rule</string>
    <string name="rule_label_type">Type</string>
    <string name="rule_label_block">Block</string>
    <string name="rule_label_except">Except</string>
    <string name="rule_remark">Remark</string>
    <string name="rule_accept">Accept</string>


    <string name="rule_empty_tip">Please input a non-empty block rule!</string>


    <string name="general_enable">Enable</string>
    <string name="general_sms_enable">Block SMS</string>
    <string name="general_call_enable">Block Call</string>
    <string name="general_show_notification">Show Notification</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>


    <string name="notification_content_text" formatted="false"> %s message(s) and call(s) blocked.</string>


</resources>
