<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/add_rule"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/add_rule"/>
        <item
            android:id="@+id/all_rules"
            android:icon="@drawable/ic_list_black_24dp"
            android:title="@string/all_rule"/>

    </group>

    <item android:title="@string/block_content">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/blockcontent_all"
                    android:icon="@drawable/ic_perm_phone_msg_black_24dp"
                    android:title="@string/all"/>
                <item
                    android:id="@+id/blockcontent_call"
                    android:icon="@drawable/ic_settings_phone_black_24dp"
                    android:title="@string/call"/>

                <item
                    android:id="@+id/blockcontent_sms"
                    android:icon="@drawable/ic_speaker_notes_black_24dp"
                    android:title="@string/sms"/>
            </group>
        </menu>
    </item>

    <item android:title="@string/title_activity_settings">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/setting"
                      android:icon="@drawable/ic_dns_black_24dp"
                      android:title="@string/title_activity_settings" />
            </group>
        </menu>
    </item>

</menu>
