<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <Switch
            android:id="@+id/sw_enable"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:text="@string/general_enable"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/sw_sms_enable"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/general_sms_enable"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/sw_call_enable"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/general_call_enable"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/sw_show_notification"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:text="@string/general_show_notification"
            android:textSize="16sp" />
    </LinearLayout>


</LinearLayout>